2006-02-19  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite): When searching lexical scope,
	also seach fields of methods of this class and super-types.
	* kawa/standard/object.java (rewriteClassDef): Call setTypes earlier,
	so we can search for inherited fields and methods.
	Remove old incomplete code for matching fields and methods.

2006-02-16  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite): Handle reference to method name
	by create a GetNamedExp.

	* kawa/standard/map.java (inline): If evaluating procedure doesn't
	have side-effects, do so inside loop, which may allow inlining.

2006-02-15  Per Bothner  <per@bothner.com>

	* COPYING: Change to use X!!/MIT license.
	* gnu/*/COPYING: Remove redundant files.

	* configure.in: Oops.  Partly go back to original handling
	of --{with,enable}-servlet.

2006-02-14  Per Bothner  <per@bothner.com>

	* kawa/standard/define.java (scanForm): Fix oops in previous check-in.

	* kawa/lang/Quote.java (expand_pair): Use GetNamedPair.combineName
	to resolve '($lookup$ part1 'part2) to 'part1:part2 - as in source.
	* kawa/lang/Translator.java (namespaceResolve): Likewise.
	Remove no-longer needed code to resolve actual namespace declaration.

	* kawa/standard/define.java (scanForm): Fix wrong test for a function
	definition - which failed when the name was a Symbol.
	* kawa/standard/define.java: Fix incorrect comment.

2006-02-13  Per Bothner  <per@bothner.com>

	* kawa/lang/Quote.java (expand_pair): Translate (%lookup$ PART1 'PART2)
	to 'PART1:PART2.
	 * kawa/lang/Translator.java (namespaceResolve): Remove two overloads.
	(namespaceRewriteResolve): Remove method.  Just inline it.
	(rewrite): Remove a namespaceResolve call.
	Always inline getNamedPart.
	* kawa/standard/Scheme.java (getNamedPartDecl): New static field.
	(makeApply): Change return type. Check if function is getNamedPartDecl.
	* kawa/standard/define.java (scanForn): Always call tr.namespaceResolve.